--- a/debian/control
+++ b/debian/control
@@ -2,15 +2,14 @@ Source: hwdetector
 Section: utils
 Priority: optional
 Maintainer: M.Angel Juan <m.angel.juan@gmail.com>
-Build-Depends: debhelper (>=10), python-all,python-setuptools,dh-python
+Build-Depends: debhelper (>=10), python3-all,python3-setuptools,dh-python
 Standards-Version: 4.1.2
-Homepage: <insert the upstream URL, if relevant>
 #Vcs-Git: git://anonscm.debian.org/collab-maint/hwdetector.git
 #Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/hwdetector.git
 
 Package: hwdetector
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, python-dill
+Depends: ${shlibs:Depends}, ${misc:Depends}, python3-dill
 Description: Simple system detector
  Simple system detector
 
