--- a/debian/rules
+++ b/debian/rules
@@ -14,16 +14,16 @@
 #export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 export PYBUILD_NAME=hwdetector
-export PYBUILD_DESTDIR_python2=debian/hwdetector
+export PYBUILD_DESTDIR_python3=debian/hwdetector
 
 %:
-	dh $@ --with python2 --buildsystem pybuild
+	dh $@ --with python3 --buildsystem pybuild
 
 override_dh_auto_install:
 	dh_auto_install
 	python setup.py install --root $(CURDIR)/debian/hwdetector --prefix=/usr
 	python setup.py clean --all
-	rm -rf $(CURDIR)/debian/hwdetector/usr/lib/python2.7/site-packages
+	rm -rf $(CURDIR)/debian/hwdetector/usr/lib/python3/site-packages
 
 
 # dh_make generated override targets
