--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: hwdetector
 Section: utils
 Priority: optional
 Maintainer: M.Angel Juan <m.angel.juan@gmail.com>
-Build-Depends: debhelper (>=10), python3-all,python3-setuptools,dh-python,python3-dill
+Build-Depends: debhelper (>=10), python3-all,python3-setuptools,dh-python,python3-dill,pybuild-plugin-pyproject
 Standards-Version: 4.1.2
 #Vcs-Git: git://anonscm.debian.org/collab-maint/hwdetector.git
 #Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/hwdetector.git
